samples/_failures_safe/1761792216_496cde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd7158f6.c: In function ‘main’:
./samples/SAFE/__tmp_dd7158f6.c:151:5: error: expected expression at end of input
  151 |     perform_dfs(&g,
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_dd7158f6.c:151:5: error: expected declaration or statement at end of input
